[package]
name = "digitalarsenal-standards"
version = "0.1.0"
edition = "2021"
description = "Space data standards framework based on CCSDS standards and Google FlatBuffers."
license = "Apache-2.0"
authors = ["sds@digitalarsenal.io", "shanebenlolo@gmail.com"]
repository = "https://github.com/DigitalArsenal/spacedatastandards.org"
homepage = "https://spacedatastandards.org"
exclude = [
    "publish_cargo.sh",
    "publish_cargo_env_example.env",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
flatbuffers = "24.3.25"


